--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,1 +1,206 @@
+@import '@/styles/fonts.css';
 @import 'tailwindcss';
+@tailwind utilities;
+
+html,
+body {
+  font-family: 'SF-Pro', sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 160%;
+  letter-spacing: -0.005rem;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+:root {
+  /* light mode colors */
+  --light-blue: #007aff;
+  --light-brown: #a2845e;
+  --light-cyan: #55bef0;
+  --light-gray: #8e8e93;
+  --light-green: #28cd41;
+  --light-indigo: #5856d6;
+  --light-mint: #00c7be;
+  --light-orange: #ff9500;
+  --light-pink: #ff2d55;
+  --light-purple: #af52de;
+  --light-red: #ff3b30;
+  --light-teal: #59adc4;
+  --light-yellow: #ffcc00;
+  --light-font: #3d3d3d;
+  --light-inactive: #cecdcd;
+  --light-inactive-bg: #f6f6f6;
+  --light-inactive-bg-opacity: #f6f6f6;
+
+  /* dark mode colors */
+  --dark-blue: #0a84ff;
+  --dark-brown: #ac8e68;
+  --dark-cyan: #5ac8f5;
+  --dark-gray: #98989d;
+  --dark-green: #32d74b;
+  --dark-indigo: #5e5ce6;
+  --dark-mint: #66d4cf;
+  --dark-orange: #ff9f0a;
+  --dark-pink: #ff375f;
+  --dark-purple: #bf5af2;
+  --dark-red: #ff453a;
+  --dark-teal: #6ac4dc;
+  --dark-yellow: #ffd60a;
+  --dark-font: #ebebf5;
+  --dark-inactive: #58595b;
+  --dark-bg: #1e1e1e;
+  --dark-window-bg: #282828;
+  --dark-window-bg-opacity: #999999;
+
+  /* ========== instagram ========== */
+  --insta-black: #262626;
+  --insta-gray: #8e8e8e;
+  --insta-nav-border: #dbdbdb;
+  --insta-nav-hover: rgba(0, 0, 0, 0.05);
+  --insta-inactive: #fafafa;
+  --insta-button-gray: #efefef;
+  --insta-button-gray-hover: rgba(219, 219, 219);
+  --insta-purple: #833ab4;
+  --insta-orange: #fd1d1d;
+  --insta-yellow: #fcb045;
+  --insta-overlay: rgba(0, 0, 0, 0.65);
+  --insta-badge-blue: rgb(0, 149, 246);
+
+  /* font weight */
+  --font-weight-thin: 100;
+  --font-weight-extralight: 200;
+  --font-weight-light: 300;
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 700;
+  --font-weight-extrabold: 800;
+  --font-weight-black: 900;
+
+  /* font-size */
+  --font-size-12: 0.75rem; /* 12px */
+  --font-size-14: 0.875rem; /* 14px */
+  --font-size-16: 1rem; /* 16px */
+  --font-size-18: 1.125rem; /* 18px */
+  --font-size-20: 1.25rem; /* 20px */
+  --font-size-24: 1.5rem; /* 24px */
+  --font-size-30: 1.875rem; /* 30px */
+  --font-size-36: 2.25rem; /* 36px */
+  --font-size-48: 3rem; /* 48px */
+}
+
+@theme inline {
+  /* light mode colors */
+  --color-mac_light-blue: var(--light-blue);
+  --color-mac_light-brown: var(--light-brown);
+  --color-mac_light-cyan: var(--light-cyan);
+  --color-mac_light-gray: var(--light-gray);
+  --color-mac_light-green: var(--light-green);
+  --color-mac_light-indigo: var(--light-indigo);
+  --color-mac_light-mint: var(--light-mint);
+  --color-mac_light-orange: var(--light-orange);
+  --color-mac_light-pink: var(--light-pink);
+  --color-mac_light-purple: var(--light-purple);
+  --color-mac_light-red: var(--light-red);
+  --color-mac_light-teal: var(--light-teal);
+  --color-mac_light-yellow: var(--light-yellow);
+  --color-mac_light-font: var(--light-font);
+  --color-mac_light-inactive: var(--light-inactive);
+  --color-mac_light-inactive-bg: var(--light-inactive-bg);
+  --color-mac_light-inactive-bg-opacity: var(--light-inactive-bg-opacity);
+
+  /* dark mode colors */
+  --color-mac_dark-blue: var(--dark-blue);
+  --color-mac_dark-brown: var(--dark-brown);
+  --color-mac_dark-cyan: var(--dark-cyan);
+  --color-mac_dark-gray: var(--dark-gray);
+  --color-mac_dark-green: var(--dark-green);
+  --color-mac_dark-indigo: var(--dark-indigo);
+  --color-mac_dark-mint: var(--dark-mint);
+  --color-mac_dark-orange: var(--dark-orange);
+  --color-mac_dark-pink: var(--dark-pink);
+  --color-mac_dark-purple: var(--dark-purple);
+  --color-mac_dark-red: var(--dark-red);
+  --color-mac_dark-teal: var(--dark-teal);
+  --color-mac_dark-yellow: var(--dark-yellow);
+  --color-mac_dark-font: var(--dark-font);
+  --color-mac_dark-inactive: var(--dark-inactive);
+  --color-mac_dark-bg: var(--dark-bg);
+  --color-mac_dark-window-bg: var(--dark-window-bg);
+  --color-mac_dark-window-bg-opacity: var(--dark-window-bg-opacity);
+
+  /* ========== instagram ========== */
+  --color-insta_black: var(--insta-black);
+  --color-insta_gray: var(--insta-gray);
+  --color-insta_nav-border: var(--insta-nav-border);
+  --color-insta_nav-hover: var(--insta-nav-hover);
+  --color-insta_inactive: var(--insta-inactive);
+  --color-insta_button-gray: var(--insta-button-gray);
+  --color-insta_button-gray-hover: var(--insta-button-gray-hover);
+  --color-insta_purple: var(--insta-purple);
+  --color-insta_orange: var(--insta-orange);
+  --color-insta_yellow: var(--insta-yellow);
+  --color-insta_overlay: var(--insta-overlay);
+  --color-insta_badge-blue: var(--insta-badge-blue);
+}
+
+@layer utilities {
+  /* font weight */
+  .font-thin {
+    font-weight: var(--font-weight-thin);
+  }
+  .font-extralight {
+    font-weight: var(--font-weight-extralight);
+  }
+  .font-light {
+    font-weight: var(--font-weight-light);
+  }
+  .font-regular {
+    font-weight: var(--font-weight-regular);
+  }
+  .font-medium {
+    font-weight: var(--font-weight-medium);
+  }
+  .font-semibold {
+    font-weight: var(--font-weight-semibold);
+  }
+  .font-bold {
+    font-weight: var(--font-weight-bold);
+  }
+  .font-extrabold {
+    font-weight: var(--font-weight-extrabold);
+  }
+  .font-black {
+    font-weight: var(--font-weight-black);
+  }
+
+  /* font-size */
+  .fs-12 {
+    font-size: var(--font-size-12); /* 12px */
+  }
+  .fs-14 {
+    font-size: var(--font-size-14); /* 14px */
+  }
+  .fs-16 {
+    font-size: var(--font-size-16); /* 16px */
+  }
+  .fs-18 {
+    font-size: var(--font-size-18); /* 18px */
+  }
+  .fs-20 {
+    font-size: var(--font-size-20); /* 20px */
+  }
+  .fs-24 {
+    font-size: var(--font-size-24); /* 24px */
+  }
+  .fs-30 {
+    font-size: var(--font-size-30); /* 30px */
+  }
+  .fs-36 {
+    font-size: var(--font-size-36); /* 36px */
+  }
+  .fs-48 {
+    font-size: var(--font-size-48); /* 48px */
+  }
+}
