--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -31,6 +31,33 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+@font-face {
+  font-family: 'Instagram';
+  src: url('fonts/Instagram.eot');
+  src:
+    url('fonts/Instagram.eot#iefix') format('embedded-opentype'),
+    url('fonts/Instagram.ttf') format('truetype'),
+    url('fonts/Instagram.woff') format('woff'),
+    url('fonts/Instagram.svg#Instagram') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+.instagram {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'Instagram' !important;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .icon-logo_light:before {
   content: '\e900';
 }
@@ -72,4 +99,103 @@
 .icon-wifi_dark:before {
   content: '\e90b';
   color: #fff;
+}
+.icon-activity:before {
+  content: '\e91f';
+}
+.icon-bookmark-filled:before {
+  content: '\e91d';
+}
+.icon-bookmark:before {
+  content: '\e91e';
+}
+.icon-instagram_logo:before {
+  content: '\e900';
+}
+.icon-link:before {
+  content: '\e91c';
+}
+.icon-chevron-down:before {
+  content: '\e91a';
+}
+.icon-badge:before {
+  content: '\e901';
+}
+.icon-pinned:before {
+  content: '\e902';
+}
+.icon-gallery:before {
+  content: '\e903';
+}
+.icon-messages:before {
+  content: '\e91b';
+}
+.icon-add-user:before {
+  content: '\e904';
+}
+.icon-camera:before {
+  content: '\e905';
+}
+.icon-grid:before {
+  content: '\e906';
+}
+.icon-chevron-left:before {
+  content: '\e907';
+}
+.icon-chevron-right:before {
+  content: '\e908';
+}
+.icon-chevron-up:before {
+  content: '\e909';
+}
+.icon-close:before {
+  content: '\e90a';
+}
+.icon-comment:before {
+  content: '\e90b';
+}
+.icon-create-filled:before {
+  content: '\e90c';
+}
+.icon-create:before {
+  content: '\e90d';
+}
+.icon-profile:before {
+  content: '\e90e';
+}
+.icon-share:before {
+  content: '\e90f';
+}
+.icon-menu:before {
+  content: '\e910';
+}
+.icon-instagram:before {
+  content: '\e911';
+}
+.icon-like-filled:before {
+  content: '\e912';
+}
+.icon-like:before {
+  content: '\e913';
+}
+.icon-reels-filled:before {
+  content: '\e914';
+}
+.icon-reels:before {
+  content: '\e915';
+}
+.icon-search-filled:before {
+  content: '\e916';
+}
+.icon-search:before {
+  content: '\e917';
+}
+.icon-home-filled:before {
+  content: '\e918';
+}
+.icon-home:before {
+  content: '\e919';
+}
+.icon-options:before {
+  content: '\e920';
 }
