--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'SF-Pro';
-  src: url('fonts/SF-Pro.ttf') format('truetype');
+  src: url('/fonts/SF-Pro.ttf') format('truetype');
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
@@ -10,10 +10,10 @@
   font-family: 'Mac';
   src: url('fonts/Mac.eot');
   src:
-    url('fonts/Mac.eot#iefix') format('embedded-opentype'),
-    url('fonts/Mac.ttf') format('truetype'),
-    url('fonts/Mac.woff') format('woff'),
-    url('fonts/Mac.svg#Mac') format('svg');
+    url('/fonts/Mac.eot#iefix') format('embedded-opentype'),
+    url('/fonts/Mac.ttf') format('truetype'),
+    url('/fonts/Mac.woff') format('woff'),
+    url('/fonts/Mac.svg#Mac') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -33,12 +33,12 @@
 
 @font-face {
   font-family: 'Instagram';
-  src: url('fonts/Instagram.eot');
+  src: url('/fonts/Instagram.eot');
   src:
-    url('fonts/Instagram.eot#iefix') format('embedded-opentype'),
-    url('fonts/Instagram.ttf') format('truetype'),
-    url('fonts/Instagram.woff') format('woff'),
-    url('fonts/Instagram.svg#Instagram') format('svg');
+    url('/fonts/Instagram.eot#iefix') format('embedded-opentype'),
+    url('/fonts/Instagram.ttf') format('truetype'),
+    url('/fonts/Instagram.woff') format('woff'),
+    url('/fonts/Instagram.svg#Instagram') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
