--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -114,6 +114,7 @@ button {
   --font-size-48: 3rem; /* 48px */
 
   /* border-radius */
+  --rounded-6: 0.375rem; /* 6px */
   --rounded-7: 0.4375rem; /* 7px */
   --rounded-10: 0.625rem; /* 10px */
   --rounded-14: 0.875rem; /* 14px */
@@ -258,6 +259,9 @@ button {
   }
 
   /* border-radius */
+  .rounded-6 {
+    border-radius: var(--rounded-6);
+  }
   .rounded-7 {
     border-radius: var(--rounded-7);
   }
